# veo

./: .dockerignore  .editorconfig  .env.example  .gitignore  .mcp.json  .npmrc  .prettierignore  .prettierrc.json  .trivyignore.yaml  CLAUDE.md  README.md  bootstrap.sh  commitlint.config.cjs  docker-compose.dokploy.yml  docker-compose.preview.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.mjolnir/: architecture.yaml
services/biometric-service/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
services/biometric-service/app/: __init__.py  challenge_store.py  config.py  domain.py  logging_setup.py  main.py  telemetry.py
services/biometric-service/app/api/: __init__.py  routes.py  schemas.py
services/biometric-service/app/face/: __init__.py  detector.py  embedder.py  imaging.py  liveness.py  matcher.py  pipeline.py  spoof.py
services/biometric-service/app/security/: internal_identity.py
services/biometric-service/docs/: threshold-calibration.md
services/biometric-service/models/: .gitkeep
services/biometric-service/scripts/: calibrate_threshold.py  download_models.py
services/biometric-service/tests/: conftest.py  test_challenge_store.py  test_decision.py  test_embed_route.py  test_enroll_route.py  test_face_match_route.py  test_internal_identity.py  test_liveness.py  test_logging.py  test_matcher.py  test_passive_liveness_readiness.py  test_pipeline_binding.py  test_redis_challenge_store.py  test_spoof.py  test_verify_route.py
(+3509 files in other folders)
